src/components/Up/style.css
.scroll-to {
  position: fixed;
  z-index: 100;
  bottom: 5rem;
  right: 5rem;
  display: flex;
  align-items: center;
  justify-content: center;
  width: 6rem;
  height: 6rem;
  font-size: 4rem;
  line-height: 1.2;
  color: var(--color-blue-700);
  background-color: transparent;
  border: 2px solid var(--color-blue-700);
  border-radius: 50%;
  opacity: 0;
  cursor: pointer;
  transition: opacity 0.3s ease-in-out;
}

.scroll-to:focus-visible {
  box-shadow: 0 0 0 4px rgba(var(--color-blue-700), 0.6);
  outline: none;
}

.scroll-to:focus {
  border-width: 2px;
  border-style: solid;
  border-color: var(--color-white);
  outline: none;
}

